Fix more errors